rnsc/test_data/integration/error/parser/type_hints/zero_index/trailing_tokens_recovers.rns
.class @zero_idx tailing_token
; should report no .super defined warning